# localmind-ai

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  index.html  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
examples/: quick_start.py  rag_example.py  workflow_example.py
src/localmind/: __init__.py  cli.py
src/localmind/agents/: __init__.py
src/localmind/api/: __init__.py
src/localmind/core/: __init__.py  config.py  engine.py  events.py  memory.py  rag.py  workflow.py
src/localmind/plugins/: __init__.py
src/localmind/utils/: __init__.py  helpers.py
src/nexusmind/: __init__.py  cli.py
src/nexusmind/api/: __init__.py  app.py
src/nexusmind/core/: __init__.py  agents.py  config.py  engine.py  memory.py  providers.py  rag.py  scheduler.py  skills.py
src/nexusmind/static/: index.html  manifest.json
src/nexusmind/utils/: __init__.py  helpers.py
src/openmind/: __init__.py  cli.py
src/openmind/api/: __init__.py
src/openmind/core/: __init__.py  config.py  engine.py  memory.py  rag.py
src/openmind/models/: __init__.py  manager.py
src/openmind/ui/: __init__.py
src/openmind/utils/: __init__.py  helpers.py
tests/: test_config.py  test_core.py  test_engine.py  test_events.py  test_memory.py  test_rag.py  test_workflow.py
