[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "openmind"
version = "0.1.0"
description = "Free ChatGPT + Claude + Gemini. Run locally. No GPU needed. One click."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "OpenMind Contributors"}]
keywords = ["ai", "llm", "local-ai", "chat", "privacy", "open-source", "ollama", "free"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Artificial Intelligence",
]

dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.104.0", "uvicorn[standard]>=0.24.0", "pydantic>=2.5.0"]
rag = ["sentence-transformers>=2.2.0"]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.21.0", "ruff>=0.1.0", "mypy>=1.5.0"]
all = ["openmind[api,rag,dev]"]

[project.scripts]
openmind = "openmind.cli:main"

[project.urls]
Homepage = "https://github.com/song-chaoyang/localmind-ai"
Documentation = "https://github.com/song-chaoyang/localmind-ai#readme"
Repository = "https://github.com/song-chaoyang/localmind-ai"
Issues = "https://github.com/song-chaoyang/localmind-ai/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
