[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexusmind"
version = "0.1.0"
description = "AI agent with persistent memory, auto skill evolution, offline scheduling, and multi-provider LLM support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "NexusMind Team" },
]
keywords = ["ai", "agent", "llm", "memory", "scheduling", "multi-provider"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Artificial Intelligence",
]

dependencies = [
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "sse-starlette>=2.0.0",
]
rag = [
    "sentence-transformers>=2.6.0",
]
all = [
    "nexusmind[api,rag]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[project.scripts]
nexusmind = "nexusmind.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nexusmind"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
